exports[`test renders loading if no content 1`] = `
<div className="locked-ends locked-sides floating">
<div className="floating__item">
<Loading />
</div>
</div>
`;

exports[`test renders video if ooyalaId 1`] = `
<div>
<Meta title={[undefined]} image="" id="1" meta={{...}} />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<SingleVideoPlayer ooyalaId="id" />
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<div className="one-whole">
<section className="soft@palm soft-double-sides@palm-wide-and-up soft@lap soft-double@lap-wide-and-up push-top push-double-top@lap-and-up">
<ArticlesContent article={{...}} />
</section>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</div>
</Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Meta title={[undefined]} image="" id="1" meta={{...}} />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={true} background="" classes={{...}} ratioClasses={{...}} aspect="square" />
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<div className="one-whole">
<section className="soft@palm soft-double-sides@palm-wide-and-up soft@lap soft-double@lap-wide-and-up push-top push-double-top@lap-and-up">
<ArticlesContent article={{...}} />
</section>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</div>
</Left>
</div>
`;
